LH[165] Fixed layout issue in IE7 by decreasing width of search bar for IE7

--- a/public/stylesheets/ie.css
+++ b/public/stylesheets/ie.css
@@ -4,3 +4,4 @@
   background-image: none;
   background-repeat: no-repeat;
   background-color: transparent; }
+div#search form input.textbox {*width:180px;}
